@@ -9,6 +9,7 @@
 	<version>1.8 Beta</version>
 	<license>GNU/GPL Version 2 or later</license>
 	<description>HTML overrides for the Podcast Manager extensions for the Hathor template</description>
+	<scriptfile>script.php</scriptfile>
 	<fileset>
 		<files folder="com_podcastmanager" target="administrator/templates/hathor/html/com_podcastmanager">
 			<folder>cpanel</folder>
